--- a/healthclub-frontend/src/App.css
+++ b/healthclub-frontend/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -32,75 +32,7 @@
   from {
     transform: rotate(0deg);
   }
-
   to {
     transform: rotate(360deg);
   }
-}
-
-
-#myVideo {
-  position: inherit;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-}
-
-/* .video-container {
-z-index: -100;
-width:100%;
-height:75%;
-overflow:hidden;
-position:absolute;
-top:0;
-left:0;
 } */
-
-#video-bg {
-  width: 100%;
-
-}
-
-.portfolio-section {
-  margin-top: 50%;
-}
-
-
-.navigation {
-  padding-top: 20px;
-  padding-bottom: 10px;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-
-  background: black;
-}
-
-.navbar-right {
-  float: right;
-  padding-right: 10%;
-}
-
-.navbar-right a {
-  text-decoration: none;
-  padding: 10px;
-  color: #fff;
-  font-family: Arial;
-  font-weight: 900;
-}
-
-.navbar-right a:hover {
-  text-decoration: underline;
-}
-
-.navbar-logo {
-  float: left;
-  padding-left: 50px;
-  font-family: Arial;
-  font-size: 30px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #fff;
-}
