Updated Schedules component

--- a/healthclub-frontend/src/components/home/Schedule.css
+++ b/healthclub-frontend/src/components/home/Schedule.css
@@ -20,7 +20,7 @@
 
 .class-date {
     padding: 10px;
-    background-color: #ff7474;
+    background-color: #1976D2;
     color: white;
     font-size: 18px;
     font-weight: bold;
