Added analytics dashboard for admin and features for Free trail members and few bug fixes

--- a/healthclub-frontend/src/components/admin/AdminDashboard.css
+++ b/healthclub-frontend/src/components/admin/AdminDashboard.css
@@ -6,9 +6,10 @@
 
 
 .divClass {
-    /* background-image: url('../../assets/images/GymBG.jpeg');
-    background-repeat: no-repeat;
+    /* background-image: url('../../assets/images/GymBG.jpeg'); */
+    /* background-repeat: no-repeat;
     background-size: cover;
     margin-left: 20px; */
-    margin-top: 100px;
+    /* margin-top: 100px;    */
   }
+
