Modified API.js to point AWS instance and added Component Diagram

--- a/healthclub-frontend/src/components/home/Membership.css
+++ b/healthclub-frontend/src/components/home/Membership.css
@@ -2,7 +2,7 @@
   /*border:1px solid white;*/
   background: #001001;
   color: #fff;
-  padding: 6rem calc((100vw-1100px) / 2);
+  /*padding: 6rem calc((100vw-1100px) / 2); */
   text-align: center;
 
   margin-top: 70px;
